--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,12 +2,12 @@
 {% block content %}
 <div class="container form-view">
 
-  <form method="post">
+  <!-- <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-  </form>
+  </form> -->
 
-
+<h1>HELLO</h1>
 
 </div>
 
