--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav">
               <a class="navbar-brand bigbrand" href="#">Ad management</a>
 
-              <li><a href="#">About</a></li>
+              <li><a href="{% url 'blog:about' %}">About</a></li>
               <li><a href="https://www.github.com">Github</a></li>
               <li><a href="https://www.linkedin.com">LinkedIn</a></li>
             </ul>
