--- a/blog/templates/blog/signin.html
+++ b/blog/templates/blog/signin.html
@@ -4,7 +4,7 @@
 <div class="jumbotron">
 
     <div class="container">
-      <form class="" action="{% url 'index' %}" method="post">
+      <form class="" action="{% url 'blog:index' %}" method="post">
         {% csrf_token %}
         <label for="Username">Username:</label>
         <input type="text" name="username" placeholder="Username">
