--- a/blog/templates/blog/form_update.html
+++ b/blog/templates/blog/form_update.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-  <form method="post" action="{% url 'blog:post_view' %}">
+  <form method="post" action="{% url 'blog:post_update' post.id %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="submit">
