--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -5,7 +5,7 @@
 <div class="jumbotron">
 
     <div class="container">
-      <form  method="post">
+      <form  method="POST">
         {% csrf_token %}
         {% bootstrap_form form %}
         <input type="submit" name="" value="Sign In">
