--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,8 +13,18 @@
         <li><img src="{{object.start_date_pic}}" alt="start_date"></li>
         <li><img src="{{object.end_date_pic}}" alt="end_date"></li>
       </ul>
-      
+
 </div>
+<a class="btn btn-default" href="{% url 'blog:add_comment_to_post' pk=post.pk %}">Add comment</a>
+{% for comment in post.comments.all %}
+    <div class="comment">
+        <div class="date">{{ comment.created_date }}</div>
+        <strong>{{ comment.author }}</strong>
+        <p>{{ comment.text|linebreaks }}</p>
+    </div>
+{% empty %}
+    <p>No comments here yet :(</p>
+{% endfor %}
 
 
 {% endblock %}
