--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,7 +12,7 @@
 {% endif %}
 {% endfor %}
 
-<div class="container">
+<!-- <div class="container">
   {% for post in post_list %}
   <div class="post">
     <ul>
@@ -21,6 +21,6 @@
     </ul>
 
   {% endfor %}
-</div>
+</div> -->
 
 {% endblock %}
