Logic of Reviewer List

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,7 +13,22 @@
         <li><img src="{{object.start_date_pic}}" alt="start_date"></li>
         <li><img src="{{object.end_date_pic}}" alt="end_date"></li>
       </ul>
-      
+
+</div>
+
+<div class="container">
+  <div class="btn-group" role="group">
+    <button type="submit" formaction="" class="btn btn-default btn-success">Accept</button>
+    <button type="submit" formaction="" class="btn btn-default btn-danger">Reject</button>
+    <a href="#">New Button</a>
+  </div>
+</div>
+
+<div class="container">
+  <div class="">
+
+  </div>
+
 </div>
 
 
