--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,14 +21,22 @@
           <li><a href="https://www.github.com">Github</a></li>
           <li><a href="https://www.linkedin.com">LinkedIn</a></li>
         </ul>
-        <!--put here if user authenticated  -->
+
         <ul class='nav navbar-nav navbar-right'>
           {% if user.is_authenticated %}
-          <li> <a href="{% url 'blog:post_view' %}">New Post</a></li>
-          <li><a href="{% url 'blog:logout' %}" >Log out</a></li>
+            <li> <a href="#">Welcome {{user.username}}</a></li>
+
+            {% if user.is_staff %}
+              <li> <a href="{% url 'blog:post_view' %}">New Post</a></li>
+              <li> <a href="{% url 'blog:rejected_post' %}">Rejected Posts</a> </li>
+            {% else %}
+              <li> <a href="{% url 'blog:dashboard' %}">Dashboard</a> </li>
+            {% endif %}
+
+            <li><a href="{% url 'blog:logout' %}">Log out</a></li>
           {% else %}
-          <li> <a href="{% url 'login' %}">login</a></li>
-          <li> <a href="{% url 'blog:signup' %}">SignUp</a></li>
+            <li> <a href="{% url 'login' %}">login</a></li>
+            <li> <a href="{% url 'blog:signup' %}">SignUp</a></li>
           {% endif %}
         </ul>
 
@@ -38,12 +46,12 @@
 
 
 
-    <div class="jumbotron">
-      <div class="container">
-        <h2>Ad Management System</h2>
-      </div>
-
+  <div class="jumbotron">
+    <div class="container">
+      <h2>Ad Management System</h2>
     </div>
+
+  </div>
 
   {% block content %}
 
