--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,8 +5,11 @@
 <head>
   <meta charset="utf-8">
   <title>POST</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -24,10 +27,19 @@
         <!--put here if user authenticated  -->
         <ul class='nav navbar-nav navbar-right'>
           {% if user.is_authenticated %}
+          <li> <a href="{% url 'blog:post_list' %}"><span class="glyphicon glyphicon-user"></span></a></li>
+
+
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Welcome {{user.username}} <span class="caret"></span></a>
+        <ul class="dropdown-menu">
           <li> <a href="{% url 'blog:post_view' %}">New Post</a></li>
           <li><a href="{% url 'blog:logout' %}" >Log out</a></li>
+        </ul>
+      </li>
+
+
           {% else %}
-          <li> <a href="{% url 'login' %}">login</a></li>
+          <li> <a href="{% url 'login' %}">Login</a></li>
           <li> <a href="{% url 'blog:signup' %}">SignUp</a></li>
           {% endif %}
         </ul>
